<resources>
    <string name="app_name">CowDigi</string>
    <string name="cow">Sapi</string>
    <string name="lingkartubuh">Lingkar tubuh (cm)</string>
    <string name="panjangtubuh">Panjang tubuh (cm)</string>
    <string name="bobotreal">Bobot real (kg)</string>
    <string name="suhubadan">Suhu badan (C)</string>
    <string name="ukurberat">Ukur Berat</string>
    <string name="hasil">Hasil</string>
    <string name="mulai">Mulai Ukur</string>
    <string name="backgroundapp">BackgroundApp</string>
    <string name="app_desc">Aplikasi Prediksi Berat Badan Sapi</string>
</resources>