<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroundapp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mulai"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:backgroundTint="@color/dark_green"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/button_style"
        android:textSize="40sp"
        android:textStyle="bold"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/openDialogButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>
